--- a/teamcity-gerrit-trigger-server/pom.xml
+++ b/teamcity-gerrit-trigger-server/pom.xml
@@ -14,11 +14,11 @@
     <packaging>jar</packaging>
     <dependencies>
 
-        <!--<dependency>-->
-            <!--<groupId>com.jcraft</groupId>-->
-            <!--<artifactId>jsch</artifactId>-->
-            <!--<version>0.1.50</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.50</version>
+        </dependency>
 
         <dependency>
             <groupId>org.jetbrains.teamcity</groupId>
@@ -26,6 +26,20 @@
             <version>${teamcity-version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+            <scope>test</scope>
+        </dependency>
+
 
         <!--<dependency>-->
             <!--<groupId>org.jetbrains.teamcity</groupId>-->
