--- a/teamcity-gerrit-trigger-server/pom.xml
+++ b/teamcity-gerrit-trigger-server/pom.xml
@@ -6,10 +6,10 @@
     <parent>
         <groupId>org.saulis</groupId>
         <artifactId>teamcity-gerrit-trigger</artifactId>
-        <version>0.1-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
     <artifactId>teamcity-gerrit-trigger-server</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>1.0</version>
 
     <packaging>jar</packaging>
     <dependencies>
